--- a/styles.css
+++ b/styles.css
@@ -17,11 +17,39 @@ input,
 button,
 textarea {
   font-family: "Press Start 2P", cursive;
+  font-size: 18px: 
+}
+
+.container-name {
+  width: 500px;
+}
+
+input {
+  width: 100%;
+  height: 60px;
+  color: #333;
+  border: 1px solid #dcdce6;
+  border-radius: 8px;
+  padding: 0 24px;
+  font-size: 20px;
+  text-align: center;
+}
+
+.container-name .buttonOK {
+  margin-top: 20px;
+  width: 100%;
+}
+#choice {
+display: none;
+}
+
+.winMarked {
+  background-color: #f0d405;
 }
 
 button {
-  margin-top: 20px;
-  width: 160px;
+  margin-bottom: 20px;
+  width: 180px;
   height: 60px;
   background: #e02041;
   border: 0;
@@ -40,7 +68,6 @@ button {
 button:hover {
   filter: brightness(70%);
 }
-
 .container {
   min-height: 100vh;
   display: flex;
@@ -55,6 +82,14 @@ button:hover {
   margin: 50px auto;
   grid-template-columns: repeat(3, 90px);
   grid-template-rows: repeat(3, 90px);
+}
+
+.level {
+  display: none;
+}
+
+.winMark {
+  background-color: green;
 }
 
 .block {
@@ -75,6 +110,7 @@ button:hover {
 
 #message {
   margin-top: 40px;
+   margin-bottom: 40px;
   color: #5a4ae6;
 }
 
